fix: scroll snap doesn't work on iphone

--- a/Sculptures/Index.css
+++ b/Sculptures/Index.css
@@ -6,10 +6,6 @@
     box-sizing: border-box;
 }
 
-html {
-    scroll-snap-type: y mandatory;
-}
-
 .content {
     display: flex;
     flex-direction: row;
